--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+html,
+body {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  text-align: center;
+}
